--- a/modules/recipess/client/views/edit-recipes.client.view.html
+++ b/modules/recipess/client/views/edit-recipes.client.view.html
@@ -13,7 +13,7 @@
           </div>
         </div>
         <div class="form-group">
-          <label for="content">Content</label>
+          <label for="content">Content</label> <!-- This has to be edited-->
           <textarea name="content" ng-model="recipes.content" id="content" class="form-control" cols="30" rows="10" placeholder="Content"></textarea>
         </div>
         <div class="form-group">
