--- a/modules/recipess/client/views/view-recipes.client.view.html
+++ b/modules/recipess/client/views/view-recipes.client.view.html
@@ -13,10 +13,10 @@
   <small>
     <em class="text-muted">
       Posted on
-      <span ng-bind="recipes.created | date:'mediumDate'"></span>
+      <span ng-bind="recipes.updated_at | date:'mediumDate'"></span>
       by
       <span ng-bind="recipes.user.displayName"></span>
     </em>
   </small>
-  <p class="lead" ng-bind="recipes.content"></p>
+  <p class="lead" ng-bind="recipes.content"></p> <!--This is what needs to be edited-->
 </section>
