--- a/modules/recipess/client/views/list-recipess.client.view.html
+++ b/modules/recipess/client/views/list-recipess.client.view.html
@@ -6,12 +6,12 @@
     <a ng-repeat="recipes in recipess" ui-sref="recipess.view({recipesId: recipes._id})" class="list-group-item">
       <small class="list-group-item-text">
         Posted on
-        <span ng-bind="recipes.created | date:'mediumDate'"></span>
+        <span ng-bind="recipes.updated_at | date:'mediumDate'"></span>
         by
         <span ng-bind="recipes.user.displayName"></span>
       </small>
       <h4 class="list-group-item-heading" ng-bind="recipes.title"></h4>
-      <p class="list-group-item-text" ng-bind="recipes.content"></p>
+      <p class="list-group-item-text" ng-bind="recipes.content"></p> <!-- edit this-->
     </a>
   </div>
   <div class="alert alert-warning text-center" ng-if="recipess.$resolved && !recipess.length">
