--- a/modules/core/client/views/header.client.view.html
+++ b/modules/core/client/views/header.client.view.html
@@ -6,6 +6,7 @@
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
     </button>
+    <!--<img alt="What U Eatin?" class="" src="modules/core/client/img/brand/horizontallogo.jpg" />-->
     <a ui-sref="home" class="navbar-brand">What U Eatin?</a>
   </div>
   <nav class="collapse navbar-collapse" collapse="!isCollapsed" role="navigation">
