--- a/modules/recipes/client/views/create-recipe.client.view.html
+++ b/modules/recipes/client/views/create-recipe.client.view.html
@@ -30,7 +30,7 @@
       </div>
       <div class="form-group" id="ingredientList">
         <div class="col-md-3"><!--quantity-->
-          <input name="quatity" ng-model="original_ingredients.quantity" placeholder="#" class="form-control">
+          <input name="quantity" ng-model="original_ingredients.quantity" placeholder="#" class="form-control">
         </div>
         <div class="col-md-3"><!--unit-->
           <select class="form-control" name="unit">
@@ -40,6 +40,7 @@
             <option>stick</option>
             <option>oz</option>
             <option>grams</option>
+            <option>box</option>
             <!--add more options here manually, OR database-->
           </select>
         </div>
