Working on contact/about/mission pages

--- a/modules/core/client/views/home.client.view.html
+++ b/modules/core/client/views/home.client.view.html
@@ -42,7 +42,7 @@
 <br>
 <br>
   <footer class="text-center">
-    <a href="contactus.html" class="footer">Contact Us</a>
+    <a ui-sref="contact" class="footer">Contact Us</a>
     <a href="about.html" class="footer">About</a>
     <a href="mission.html" class="footer">Our Mission</a>
   </footer>
