--- a/modules/core/client/views/header.client.view.html
+++ b/modules/core/client/views/header.client.view.html
@@ -38,6 +38,9 @@
         </a>
         <ul class="dropdown-menu" role="menu">
           <li ui-sref-active="active">
+            <a ui-sref="personalpage">View Profile</a>
+          </li>
+          <li ui-sref-active="active">
             <a ui-sref="settings.profile">Edit Profile</a>
           </li>
           <li ui-sref-active="active">
