--- a/modules/recipes/client/views/create-recipe.client.view.html
+++ b/modules/recipes/client/views/create-recipe.client.view.html
@@ -28,12 +28,14 @@
           </div>
         </div>
       </div>
-      <div class="form-group" id="ingredientList">
+
+
+      <div class="input-group" id="ingredientList">
         <div class="col-md-3"><!--quantity-->
-          <input name="quantity1" ng-model="original_ingredients.quantity" placeholder="#" class="form-control">
+          <input name="quantity" ng-model="ingredient.quantity" placeholder="#" class="form-control" type="number">
         </div>
         <div class="col-md-3"><!--unit-->
-          <select class="form-control" name="unit1" ng-model="original_ingredients.unit">
+          <select class="form-control" name="unit" ng-model="ingredient.unit">
             <option>tsp</option>
             <option>tbsp</option>
             <option>cup</option>
@@ -45,10 +47,41 @@
           </select>
         </div>
         <div class="col-md-6"><!--item-->
-          <input name="item1" ng-model="original_ingredients.item" placeholder="ingredient" class="form-control">
+          <input name="item" ng-model="ingredient.item" placeholder="ingredient" class="form-control" type="text">
         </div>
+        <span class="input-group-btn">
+          <button type="button" class="btn btn-secondary" ng-click="addIngredientLine('ingredientList');">
+            <span class="glyphicon glyphicon-plus"></span>
+          </button>
+        </span>
       </div>
-      <button type="button" class="btn btn-primary" ng-click="addIngredient('ingredientList');">+ Add Ingredient</button>
+
+      <div class="input-group" id="ingredientsAdded" ng-repeat="ingredient in original_ingredients">
+        <div class="col-md-3"><!--quantity-->
+          <input name="quantity" placeholder="#" class="form-control" value="{{ingredient.quantity}}" type="number">
+        </div>
+        <div class="col-md-3"><!--unit-->
+          <select class="form-control" name="unit" value="{{ingredient.unit}}">
+            <option>tsp</option>
+            <option>tbsp</option>
+            <option>cup</option>
+            <option>stick</option>
+            <option>oz</option>
+            <option>grams</option>
+            <option>box</option>
+            <!--add more options here manually, OR database-->
+          </select>
+        </div>
+        <div class="col-md-6" ><!--item-->
+          <input name="item" placeholder="ingredient" class="form-control" value="{{ingredient.item}}" type="text">
+        </div>
+        <span class="input-group-btn">
+            <button type="button" class="btn btn-secondary">
+              <span class="glyphicon glyphicon-minus"></span>
+            </button>
+          </span>
+      </div>
+
     </div>
     <div class="form-group">
       <label for="directions">Cooking Instructions</label>
