about,contact,mission pages finished.

--- a/modules/core/client/views/about.client.view.html
+++ b/modules/core/client/views/about.client.view.html
@@ -1,20 +1,82 @@
 <section ng-controller="HomeController">
   <div class="jumbotron text-center">
     <div class="row">
-      <div class="col-sm-12 col-sm-offset-4">
-        <img alt="What U Eatin?" class="img-responsive text-center" src="modules/core/client/img/brand/newlogo.jpg"/>
-      </div>
-      <br>
       <div class="col-sm-12 text-center">
-        <p class="blockquote"><strong>ABOUT</strong></p>
+        <h2 id="aboutheader">Meet our Developers!</h2>
       </div>
     </div>
   </div>
 
+  <div class="row">
+    <div class="col-md-2"></div>
+    <div class="col-md-8">
+      <img alt="Ben Hammack" class="img-responsive modal-content text-center" src="modules/core/client/img/brand/ben.jpg"/>
+      <h3 class="blockquote text-center">Ben Hammack</h3>
+      <p class="text-center"> Ben loves long walks on the beach and reading his bible. He plans on working for the North Korean government when 
+      he graduates.  </p>
+      <br>
+      <br>
+    </div>
+    <div class="col-md-2"></div>
+  </div>
+  <div class="row">
+    <div class="col-md-2"></div>
+    <div class="col-md-8">
+      <img alt="Conor Doherty" class="img-responsive modal-content img-center" src="modules/core/client/img/brand/conor.jpg"/>
+      <h3 class="blockquote text-center">Conor Doherty</h3>
+      <p class="text-center"> Conor enjoys flipping his hair and browsing Netflix in his free time. When he graduates he hopes
+      to watch Netflix professionally. </p>
+      <br>
+      <br>
+    </div>
+    <div class="col-md-2"></div>
+  </div>
+  <div class="row">
+    <div class="col-md-3"></div>
+    <div class="col-md-6">
+      <img alt="Dakota Funchess" class="img-responsive modal-content img-center" src="modules/core/client/img/brand/dakota.jpg"/>
+      <h3 class="blockquote text-center">Dakota Funchess</h3>
+      <p class="text-center"> Dakota likes to play the only good MOBA game there is, DoTA. He also has a beautiful white dog that he loves very much. In the future Dakota hopes to get a job so he can eat food. </p>
+      <br>
+      <br>
+    </div>
+    <div class="col-md-3"></div>
+  </div>
+  <div class="row">
+    <div class="col-md-3"></div>
+    <div class="col-md-6">
+      <img alt="Ed Tischler" class="img-responsive modal-content img-center" src="modules/core/client/img/brand/ed.jpg"/>
+      <h3 class="blockquote text-center">Ed Tischler</h3>
+      <p class="text-center"> Ed spends his free time at extremely classy wine-tasting events. He prides himself on drinking only the finest alcohol in very moderate quantities. Ed plans on becoming John Cena after graduation. </p>
+      <br>
+      <br>
+    </div>
+    <div class="col-md-3"></div>
+  </div>
+  <div class="row">
+    <div class="col-md-3"></div>
+    <div class="col-md-6">
+      <img alt="Madeleine Monfort" class="img-responsive modal-content img-center" src="modules/core/client/img/brand/maddie.jpg"/>
+      <h3 class="blockquote text-center">Madeleine Monfort</h3>
+      <p class="text-center"> Madeleine reads books in her free time. She enjoys dad jokes, and javascript. You can find her on <a href="http://www.farmersonly.com" target="blank">farmersonly.com</a> </p>
+      <br>
+      <br>
+    </div>
+    <div class="col-md-3"></div>
+  </div>
+  <div class="row">
+    <div class="col-md-3"></div>
+    <div class="col-md-6">
+      <img alt="Mitchell Irvin" class="img-responsive modal-content img-center" src="modules/core/client/img/brand/mitch.jpg"/>
+      <h3 class="blockquote text-center">Mitchell Irvin</h3>
+      <p class="text-center"> Mitch picks things up and puts them down. He also eats pizzas almost every evening. In the future he hopes to open his own pizza restaurant, so he can eat pizzas every night for free. </p>
+      <br>
+      <br>
+    </div>
+    <div class="col-md-3"></div>
+  </div>
 
-<br>
-<br>
-<br>
+
   <footer class="modal-footer modal-footer-center">
     <a ui-sref="contact" class="footer">Contact Us</a>
     <a ui-sref="about" class="footer">About</a>
