--- a/modules/core/client/views/mission.client.view.html
+++ b/modules/core/client/views/mission.client.view.html
@@ -1,20 +1,30 @@
 <section ng-controller="HomeController">
   <div class="jumbotron text-center">
     <div class="row">
-      <div class="col-sm-12 col-sm-offset-4">
-        <img alt="What U Eatin?" class="img-responsive text-center" src="modules/core/client/img/brand/newlogo.jpg"/>
-      </div>
-      <br>
       <div class="col-sm-12 text-center">
-        <p class="blockquote"><strong>OUR MISSION</strong></p>
+        <h2 id="aboutheader">Our Mission</h2>
       </div>
     </div>
   </div>
+  <div class="row">
+      <div class="col-md-1">
+      </div>
+      <div class="col-md-4">
+        <img alt="Dr. Wanda Eugene" class="img-responsive multiple-borders text-center" src="modules/core/client/img/brand/wanda.jpg"/>
+      </div>
+      <div class="col-md-1">
+      </div>
+      <div class="col-md-4 text-left">
+        <br>
+        <h2 class="text-center">The Idea</h2>
+        <p id="bodytext">Two years and one hackathon ago, Dr. Wanda Eugene had an idea. She wanted people to have an opportunity to make healthy choices, without forcing them to make immediate drastic changes. That idea became whatUEatin?. Today we are working to provide a platform for people to eat healthier; one ingredient at a time. 
+        </p>
+      </div>
+      <div class="col-md-1">
+      </div>
+  </div>
 
 
-<br>
-<br>
-<br>
   <footer class="modal-footer modal-footer-center">
     <a ui-sref="contact" class="footer">Contact Us</a>
     <a ui-sref="about" class="footer">About</a>
