Revert "fixing contact/home/routes merge conflict"
This reverts commit 0c9d8c065eb480414b1b7b8a2565b36ec93ae0da, reversing
changes made to e8ed26e1f46706bed2c3585db8a2453ae9ae4392.

--- a/modules/core/client/views/header.client.view.html
+++ b/modules/core/client/views/header.client.view.html
@@ -32,13 +32,11 @@
     </ul>
     <ul class="nav navbar-nav navbar-right" ng-show="authentication.user">
       <li class="dropdown" dropdown>
-        <a class="glyphicon glyphicon-cog" dropdown-toggle role="button">
-          <b class="caret"></b>
+        <a class="dropdown-toggle user-header-dropdown-toggle" dropdown-toggle role="button">
+          <img ng-src="{{authentication.user.profileImageURL}}" alt="{{authentication.user.displayName}}" class="header-profile-image" />
+          <span ng-bind="authentication.user.displayName"></span> <b class="caret"></b>
         </a>
         <ul class="dropdown-menu" role="menu">
-          <li ui-sref-active="active">
-            <a ui-sref="personalpage">View Profile</a>
-          </li>
           <li ui-sref-active="active">
             <a ui-sref="settings.profile">Edit Profile</a>
           </li>
