--- a/modules/core/client/views/home.client.view.html
+++ b/modules/core/client/views/home.client.view.html
@@ -5,7 +5,7 @@
         <img alt="What U Eatin?" class="img-responsive text-center" src="modules/core/client/img/brand/newlogo.jpg"/>
       </div>
       <br>
-      <div class="col-sm-12 search-bar">
+      <div class="col-sm-12 text-center">
         <p class="blockquote">SEARCH BAR</p>
       </div>
     </div>
@@ -41,10 +41,10 @@
 <br>
 <br>
 <br>
-  <footer class="modal-footer modal-footer-center">
+  <footer class="text-center">
     <a ui-sref="contact" class="footer">Contact Us</a>
-    <a ui-sref="about" class="footer">About</a>
-    <a ui-sref="mission" class="footer">Our Mission</a>
+    <a href="about.html" class="footer">About</a>
+    <a href="mission.html" class="footer">Our Mission</a>
   </footer>
 <br>
 </section>
