--- a/modules/recipes/client/views/create-recipe.client.view.html
+++ b/modules/recipes/client/views/create-recipe.client.view.html
@@ -3,79 +3,93 @@
     <h1>New Recipe</h1>
   </div>
   <form name="recipeForm" class="form-horizontal" ng-submit="create(recipeForm.$valid)" novalidate>
-    <div class="col-md-4">
-      <!--This is where the image formatting goes-->
-    </div>
-    <div class="col-md-8">
-      <div class="form-group" show-errors>
-        <label for="title">Recipe Title</label>
-        <input name="title" type="text" ng-model="title" id="title" class="form-control" placeholder="Title" required></input>
-        <div ng-messages="recipeForm.title.$error" role="alert">
-          <p class="help-block error-text" ng-message="required">Recipe title is required.</p>
-        </div>
+    <div class="row">
+      <div class="col-md-4"> <!--recipe image-->
+        <div class="form-group text-center">
+            <img ng-src="{{imageURL}}" alt="{{recipe.displayName}}" class="img-thumbnail user-profile-picture">
+          </div>
+          <div class="text-center form-group" ng-hide="uploader.queue.length">
+            <span class="btn btn-default btn-file">
+                Select Image <input type="file" nv-file-select uploader="uploader">
+            </span>
+          </div>
+          <div class="text-center form-group" ng-show="uploader.queue.length">
+            <button class="btn btn-primary" ng-click="uploadRecipePicture();">Upload</button>
+            <button class="btn btn-default" ng-click="cancelUpload();">Cancel</button>
+          </div>
       </div>
-      <div class="row">
-        <div class="col-md-6">
-          <div class="form-group">
-            <label for="servings">Servings</label>
-            <input name="servings" ng-model="servings" id="servings" placeholder="Servings" class="form-control"></input>
+      <div class="col-md-8"> <!--recipe data-->
+        <div class="form-group" show-errors>
+          <label for="title">Recipe Title</label>
+          <input name="title" type="text" ng-model="title" id="title" class="form-control" placeholder="Title" required></input>
+          <div ng-messages="recipeForm.title.$error" role="alert">
+            <p class="help-block error-text" ng-message="required">Recipe title is required.</p>
           </div>
         </div>
-        <div class="col-md-6">
-          <div class="form-group">
-            <label for="cook_time">Cook Time</label>
-            <input name="cook_time" ng-model="cook_time" id="cook_time"  placeholder="Total Cooking Time" class="form-control"></input>
+        <div class="row">
+          <div class="col-md-6">
+            <div class="form-group">
+              <label for="servings">Servings</label>
+              <input name="servings" ng-model="servings" id="servings" placeholder="Servings" class="form-control"></input>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="form-group">
+              <label for="cook_time">Cook Time</label>
+              <input name="cook_time" ng-model="cook_time" id="cook_time"  placeholder="Total Cooking Time" class="form-control"></input>
+            </div>
           </div>
         </div>
-      </div>
-      <div class="input-group" id="ingredientList">
-        <div class="col-md-3"><!--quantity-->
-            
-          <input name="quantity" ng-model="ingredients.quantity" placeholder="#" class="form-control" type="number" id="quantity">
-        </div>
-        <div class="col-md-3"><!--unit-->
-          <select class="form-control" name="unit" ng-model="ingredients.unit">
-            <option>tsp</option>
-            <option>tbsp</option>
-            <option>cup</option>
-            <option>stick</option>
-            <option>oz</option>
-            <option>grams</option>
-            <option>box</option>
-            <!--add more options here manually, OR database-->
-          </select>
-        </div>
-        <div class="col-md-6"><!--item-->
-          <input name="item" ng-model="ingredients.item" placeholder="ingredient" class="form-control" type="text">
-        </div>
-        <span class="input-group-btn">
-          <button type="button" class="btn btn-secondary" ng-click="addIngredientLine()">
-            <span class="glyphicon glyphicon-plus"></span>
-          </button>
-        </span>
-      </div>
-
-      <div class="input-group" id="ingredientsAdded" ng-repeat="ingredient in original_ingredients">
-
-        <div class="col-md-3"><!--quantity-->
-          <input  readonly name="quantity" placeholder="#" class="form-control" value="{{ingredient.quantity}}" type="number">
-        </div>
-        <div class="col-md-3"><!--unit-->
-          <input readonly class="form-control" name="unit" value="{{ingredient.unit}}" type="text">
-        </div>
-        <div class="col-md-6" ><!--item-->
-          <input  readonly name="item" placeholder="ingredient" class="form-control" value="{{ingredient.item}}" type="text">
-        </div>
-        <span class="input-group-btn">
-            <button type="button" class="btn btn-secondary">
-              <span class="glyphicon glyphicon-minus"></span>
+        <div class="input-group" id="ingredientList">
+          <div class="col-md-3"><!--quantity-->
+              
+            <input name="quantity" ng-model="ingredients.quantity" placeholder="#" class="form-control" type="number" id="quantity">
+          </div>
+          <div class="col-md-3"><!--unit-->
+            <select class="form-control" name="unit" ng-model="ingredients.unit">
+              <option>tsp</option>
+              <option>tbsp</option>
+              <option>cup</option>
+              <option>stick</option>
+              <option>oz</option>
+              <option>grams</option>
+              <option>box</option>
+              <!--add more options here manually, OR database-->
+            </select>
+          </div>
+          <div class="col-md-6"><!--item-->
+            <input name="item" ng-model="ingredients.item" placeholder="ingredient" class="form-control" type="text">
+          </div>
+          <span class="input-group-btn">
+            <button type="button" class="btn btn-secondary" ng-click="addIngredientLine()">
+              <span class="glyphicon glyphicon-plus"></span>
             </button>
           </span>
-      </div>
+        </div>
 
+        <div class="input-group" id="ingredientsAdded" ng-repeat="ingredient in original_ingredients">
+
+          <div class="col-md-3"><!--quantity-->
+            <input  readonly name="quantity" placeholder="#" class="form-control" value="{{ingredient.quantity}}" type="number">
+          </div>
+          <div class="col-md-3"><!--unit-->
+            <input readonly class="form-control" name="unit" value="{{ingredient.unit}}" type="text">
+          </div>
+          <div class="col-md-6" ><!--item-->
+            <input  readonly name="item" placeholder="ingredient" class="form-control" value="{{ingredient.item}}" type="text">
+          </div>
+          <span class="input-group-btn">
+              <button type="button" class="btn btn-secondary">
+                <span class="glyphicon glyphicon-minus"></span>
+              </button>
+            </span>
+        </div>
+      </div>
     </div>
     <div class="form-group">
-      <label for="directions">Cooking Instructions</label>
+      <div class="col-md-4"> 
+        <label for="directions">Cooking Instructions</label>
+      </div>
       <textarea name="directions" ng-model="directions" id="directions" placeholder="add instructions here" class="form-control" rows="6"></textarea>
     </div>
     <div class="form-group">
