--- a/modules/core/client/views/about.client.view.html
+++ b/modules/core/client/views/about.client.view.html
@@ -8,9 +8,8 @@
   </div>
 
   <div class="row">
-    <div class="col-md-2"></div>
-    <div class="col-md-8">
-      <img alt="Ben Hammack" class="img-responsive modal-content text-center" src="modules/core/client/img/brand/ben.jpg"/>
+    <div class="col-lg-6 col-lg-offset-3">
+      <a class="center"><img alt="Ben Hammack" class="img-responsive modal-content center" src="modules/core/client/img/brand/ben.jpg"/></a>
       <h3 class="blockquote text-center">Ben Hammack</h3>
       <p class="text-center"> Ben loves long walks on the beach and reading his bible. He plans on working for the North Korean government when 
       he graduates.  </p>
