--- a/modules/recipes/client/views/create-recipe.client.view.html
+++ b/modules/recipes/client/views/create-recipe.client.view.html
@@ -88,9 +88,9 @@
     </div>
     <div class="form-group">
       <div class="col-md-4"> 
-        <label for="directions">Cooking Instructions</label>
+        <label for="instructions">Cooking Instructions</label>
       </div>
-      <textarea name="directions" ng-model="directions" id="directions" placeholder="add instructions here" class="form-control" rows="6"></textarea>
+      <textarea name="instructions" ng-model="instructions" id="instructions" placeholder="add instructions here" class="form-control" rows="6"></textarea>
     </div>
     <div class="form-group">
       <input type="submit" class="btn btn-default">
