--- a/modules/core/client/views/home.client.view.html
+++ b/modules/core/client/views/home.client.view.html
@@ -18,7 +18,7 @@
 
   <div class="row">
     <div class="col-md-3">
-      <h2><strong>C</strong>ategories</h2>
+      <h2 ui-sref="categories"><strong>C</strong>ategories</h2>
       <ul>
         <li>Category the First
         </li>
