styling unified across about/contact/mission. added browse recipes to homepage

--- a/modules/core/client/views/mission.client.view.html
+++ b/modules/core/client/views/mission.client.view.html
@@ -1,12 +1,12 @@
 <section ng-controller="HomeController">
-  <div class="jumbotron text-center">
-    <div class="row">
+  <div class="jumbotron text-center" id="style">
+    <div class="row" id="style">
       <div class="col-sm-12 text-center">
         <h2 id="aboutheader">Our Mission</h2>
       </div>
     </div>
   </div>
-  <div class="row">
+  <div class="row" id="style">
       <div class="col-md-1">
       </div>
       <div class="col-md-4">
@@ -25,7 +25,7 @@
   </div>
 
 
-  <footer class="modal-footer modal-footer-center">
+  <footer class="modal-footer modal-footer-center" id="style">
     <a ui-sref="contact" class="footer">Contact Us</a>
     <a ui-sref="about" class="footer">About</a>
     <a ui-sref="mission" class="footer">Our Mission</a>
