--- a/modules/core/client/views/about.client.view.html
+++ b/modules/core/client/views/about.client.view.html
@@ -1,5 +1,5 @@
 <section ng-controller="HomeController">
-  <div class="jumbotron text-center">
+  <div class="jumbotron text-center" id="style">
     <div class="row">
       <div class="col-sm-12 text-center">
         <h2 id="aboutheader">Meet our Developers!</h2>
@@ -7,7 +7,7 @@
     </div>
   </div>
 
-  <div class="row">
+  <div class="row" id="style">
     <div class="col-lg-6 col-lg-offset-3">
       <a class="center"><img alt="Ben Hammack" class="img-responsive modal-content center" src="modules/core/client/img/brand/ben.jpg"/></a>
       <h3 class="blockquote text-center">Ben Hammack</h3>
@@ -18,7 +18,7 @@
     </div>
     <div class="col-md-2"></div>
   </div>
-  <div class="row">
+  <div class="row" id="style">
     <div class="col-md-2"></div>
     <div class="col-md-8">
       <img alt="Conor Doherty" class="img-responsive modal-content img-center" src="modules/core/client/img/brand/conor.jpg"/>
@@ -30,7 +30,7 @@
     </div>
     <div class="col-md-2"></div>
   </div>
-  <div class="row">
+  <div class="row" id="style">
     <div class="col-md-3"></div>
     <div class="col-md-6">
       <img alt="Dakota Funchess" class="img-responsive modal-content img-center" src="modules/core/client/img/brand/dakota.jpg"/>
@@ -41,7 +41,7 @@
     </div>
     <div class="col-md-3"></div>
   </div>
-  <div class="row">
+  <div class="row" id="style">
     <div class="col-md-3"></div>
     <div class="col-md-6">
       <img alt="Ed Tischler" class="img-responsive modal-content img-center" src="modules/core/client/img/brand/ed.jpg"/>
@@ -52,7 +52,7 @@
     </div>
     <div class="col-md-3"></div>
   </div>
-  <div class="row">
+  <div class="row" id="style">
     <div class="col-md-3"></div>
     <div class="col-md-6">
       <img alt="Madeleine Monfort" class="img-responsive modal-content img-center" src="modules/core/client/img/brand/maddie.jpg"/>
@@ -63,7 +63,7 @@
     </div>
     <div class="col-md-3"></div>
   </div>
-  <div class="row">
+  <div class="row" id="style">
     <div class="col-md-3"></div>
     <div class="col-md-6">
       <img alt="Mitchell Irvin" class="img-responsive modal-content img-center" src="modules/core/client/img/brand/mitch.jpg"/>
