--- a/modules/core/client/views/home.client.view.html
+++ b/modules/core/client/views/home.client.view.html
@@ -18,59 +18,77 @@
       </div>
     </div>
   </div>-->
-  <div class="row topper" id="style">
-    <div class="col-md-12 center">
-      <img id="veggies" src="modules/core/client/img/brand/veggies.jpg"/>
-      <div id="overlay-left">
-        <h3 class="text-center"> Pre-healthification... </h2>
-        <p class="text-center"> unhealthy stuff </p>
-      </div>
-      <div id="overlay" class="center">
-        <h2 class="text-center"> FEATURED RECIPE </h2>
-        <p class="text-center"> Insert some random recipe stuff here </p>
-        <ul ui-sref="recipes.view({recipeId: recipe._id})">
-          <li>
-            <span ng-bind="recipe.updated_at | date:'mediumDate'"></span>
-            <span ng-bind="recipe.updated_at | date:'mediumDate'"></span>
-            <h2 class="list-group-item-heading" ng-bind="recipe.title"></h2>
-            <span ng-bind="recipe.user.displayName"></span>
-            <p class="list-group-item-text" ng-bind="recipe.content"></p> 
-          </li>
-        </ul>
-        
-      </div>
-      <div id="overlay-right">
-        <h3 class="text-center"> Post-healthification! </h2>
-        <p class="text-center"> healthy stuff </p>
-      </div>
-    </div> 
-  </div>
-
-
-  <div class="row" id="style2">
-    <div class="col-md-8 col-md-offset-2 center">
-      <h2 class="text-center"> Browse Recipes </h2>
-      <div class="table-scrolling">
-        <table class="table table-striped table-hover" id="table-border">
-          <tr ng-repeat="recipe in recipes" ui-sref="recipes.view({recipeId: recipe._id})" ng-click='showDetails($index)'>
-            <td>Posted on
-            <span ng-bind="recipe.updated_at | date:'mediumDate'"></span>
-            <h2 class="list-group-item-heading" ng-bind="recipe.title"></h2>
-            </td>
-            <td>by
-            <span ng-bind="recipe.user.displayName"></span>
-            <p class="list-group-item-text" ng-bind="recipe.content"></p> 
-            </td>
-          </tr>
-        </table>
-      </div>
-      <div class="col-md-6">
-      </div>
+    <div class="row topper" id="style">
+      <div class="col-md-12 center">
+        <img id="veggies" src="modules/core/client/img/brand/veggies.jpg"/>
+        <div id="overlay-left">
+          <h3 class="text-center"> Pre-healthification... </h2>
+          <p class="text-center"> Unhealthy ingredients: </p>
+          <ul>
+            <li>Ingredient 1</li>
+            <li>Ingredient 2</li>
+          </ul>
+        </div>
+        <div id="overlay" class="center">
+          <h2 class="text-center"> FEATURED RECIPE </h2>
+          <p class="text-center"> Insert some random recipe stuff here </p>
+          <ul ui-sref="recipes.view({recipeId: recipe._id})">
+            <li>
+              <span ng-bind="recipe.updated_at | date:'mediumDate'"></span>
+              <span ng-bind="recipe.updated_at | date:'mediumDate'"></span>
+              <h2 class="list-group-item-heading" ng-bind="recipe.title"></h2>
+              <span ng-bind="recipe.user.displayName"></span>
+              <p class="list-group-item-text" ng-bind="recipe.content"></p> 
+            </li>
+          </ul>
+          
+        </div>
+        <div id="overlay-right">
+          <h3 class="text-center"> Post-healthification! </h2>
+          <p class="text-center"> healthy stuff </p>
+        </div>
+      </div> 
     </div>
-  </div>
-    <footer class="modal-footer modal-footer-center" id="style">
-      <a ui-sref="contact" class="footer">Contact Us</a>
-      <a ui-sref="about" class="footer">About</a>
-      <a ui-sref="mission" class="footer">Our Mission</a>
-    </footer>
+
+
+    <div class="row" id="style2">
+      <div class="col-md-5 col-md-offset-1 center">
+        <h2 class="text-center"> Browse Recipes </h2>
+        <div class="table-scrolling">
+          <table class="table table-striped table-hover" id="table-border">
+            <tr ng-repeat="recipe in recipes" ng-click='showDetails($index)'> <!--ui-sref="recipes.view({recipeId: recipe._id})"-->
+              <td>Posted on
+              <span ng-bind="recipe.updated_at | date:'mediumDate'"></span>
+              <h2 class="list-group-item-heading" ng-bind="recipe.title"></h2>
+              </td>
+              <td>by
+              <span ng-bind="recipe.user.displayName"></span>
+              <p class="list-group-item-text" ng-bind="recipe.content"></p> 
+              </td>
+            </tr>
+          </table>
+        </div>
+      </div>
+      <div class="jumbotron col-md-4 col-md-offset-1">
+            <h3>Select a Recipe for more details</h3>
+            <!-- 
+              Include a way to display detailed information about an individual listing:
+                   * consider how to use ng-click within the the table to implement this feature
+             -->
+             <br />
+             <p id="details"><strong>Title:</strong> <br />
+              <span>{{detailedInfo.title}}</span> <br />
+              <strong>Ingredients:</strong><br /> 
+              <span ng-repeat="ingredient in detailedInfo.original_ingredients">"{{ingredient.quantity}}  {{ingredient.unit}} {{ingredient.item}}" </span> <br>
+              <strong>Directions: </strong> <br>
+              <span>{{detailedInfo.directions}}</span>
+             </p>
+      </div>
+
+    </div>
+      <footer class="modal-footer modal-footer-center" id="style">
+        <a ui-sref="contact" class="footer">Contact Us</a>
+        <a ui-sref="about" class="footer">About</a>
+        <a ui-sref="mission" class="footer">Our Mission</a>
+      </footer>
 </section>
