--- a/modules/core/client/views/about.client.view.html
+++ b/modules/core/client/views/about.client.view.html
@@ -75,11 +75,9 @@
     <div class="col-md-3"></div>
   </div>
 
-
-  <footer class="modal-footer modal-footer-center">
+  <footer class="modal-footer modal-footer-center" id="style">
     <a ui-sref="contact" class="footer">Contact Us</a>
     <a ui-sref="about" class="footer">About</a>
     <a ui-sref="mission" class="footer">Our Mission</a>
   </footer>
-<br>
 </section>
