--- a/modules/core/client/views/home.client.view.html
+++ b/modules/core/client/views/home.client.view.html
@@ -1,50 +1,94 @@
-<section ng-controller="HomeController">
-  <div class="jumbotron text-center">
-    <div class="row">
-      <div class="col-sm-12 col-sm-offset-4">
-        <img alt="What U Eatin?" class="img-responsive text-center" src="modules/core/client/img/brand/newlogo.jpg"/>
-      </div>
-      <br>
-      <div class="col-sm-12 search-bar">
-        <p class="blockquote">SEARCH BAR</p>
-      </div>
-    </div>
-    <!--<div class="row">
-      <div class="col-sm-12 col-sm-push-6">
-        Search Bar Placeholder
-      </div>
-    </div>-->
-  </div>
+<section ng-controller="HomeController" ng-init="find()">
 
-  <div class="row">
-    <div class="col-md-3">
-      <h2 ui-sref="categories"><strong>C</strong>ategories</h2>
-      <ul>
-        <li>Category the First
-        </li>
-        <li>Category the Second
-        </li>
-        <li>Category the Third
-        </li>
-      </ul>
+<!--
+  <div class="text-center" id="style">
+    <div class="row" id="style">
+      <div class="col-lg-12 search-bar">
+          <div id="tfheader">
+            <form id="tfnewsearch" method="get" action="http://www.google.com">
+              <input type="text" class="tftextinput" name="q" size="21" maxlength="120"><input type="submit" value="search recipes" class="tfbutton">
+            </form>
+          <div class="tfclear"></div>
+          </div>
+      </div>
+      <div class="col-sm-3">
+      </div>
+      <div class="col-md-12 text-center">
+        <p id="paragraph">Healthier recipes, one ingredient at a time.</p>
+      </div>
     </div>
-    <div class="col-md-6">
-      <br>
-      <h2 class="text-center"><strong>T</strong>rending</h2>
-      <p>Insert a GUI (slideshow?) of trending recipes here.</p>
+  </div>-->
+    <div class="row topper" id="style">
+      <div class="col-md-12 center">
+        <img id="veggies" src="modules/core/client/img/brand/veggies.jpg"/>
+        <div id="overlay-left">
+          <h3 class="text-center"> Pre-healthification... </h2>
+          <p class="text-center"> Unhealthy ingredients: </p>
+          <ul>
+            <li>Ingredient 1</li>
+            <li>Ingredient 2</li>
+          </ul>
+        </div>
+        <div id="overlay" class="center">
+          <h2 class="text-center"> FEATURED RECIPE </h2>
+          <p class="text-center"> Insert some random recipe stuff here </p>
+          <ul ui-sref="recipes.view({recipeId: recipe._id})">
+            <li>
+              <span ng-bind="recipe.updated_at | date:'mediumDate'"></span>
+              <span ng-bind="recipe.updated_at | date:'mediumDate'"></span>
+              <h2 class="list-group-item-heading" ng-bind="recipe.title"></h2>
+              <span ng-bind="recipe.user.displayName"></span>
+              <p class="list-group-item-text" ng-bind="recipe.content"></p> 
+            </li>
+          </ul>
+          
+        </div>
+        <div id="overlay-right">
+          <h3 class="text-center"> Post-healthification! </h2>
+          <p class="text-center"> healthy stuff </p>
+        </div>
+      </div> 
     </div>
-    <div class="col-md-3">
-      <h2><strong>F</strong>eatured</h2>
-      <p>Insert the featured recipe here.</p>
+
+
+    <div class="row" id="style2">
+      <div class="col-md-5 col-md-offset-1 center">
+        <h2 class="text-center"> Browse Recipes </h2>
+        <div class="table-scrolling">
+          <table class="table table-striped table-hover" id="table-border">
+            <tr ng-repeat="recipe in recipes" ng-click='showDetails($index)'> <!--ui-sref="recipes.view({recipeId: recipe._id})"-->
+              <td>Posted on
+              <span ng-bind="recipe.updated_at | date:'mediumDate'"></span>
+              <h2 class="list-group-item-heading" ng-bind="recipe.title"></h2>
+              </td>
+              <td>by
+              <span ng-bind="recipe.user.displayName"></span>
+              <p class="list-group-item-text" ng-bind="recipe.content"></p> 
+              </td>
+            </tr>
+          </table>
+        </div>
+      </div>
+      <div class="jumbotron col-md-4 col-md-offset-1">
+            <h3>Select a Recipe for more details</h3>
+            <!-- 
+              Include a way to display detailed information about an individual listing:
+                   * consider how to use ng-click within the the table to implement this feature
+             -->
+             <br />
+             <p id="details"><strong>Title:</strong> <br />
+              <span>{{detailedInfo.title}}</span> <br />
+              <strong>Ingredients:</strong><br /> 
+              <span ng-repeat="ingredient in detailedInfo.original_ingredients">"{{ingredient.quantity}}  {{ingredient.unit}} {{ingredient.item}}" </span> <br>
+              <strong>Directions: </strong> <br>
+              <span>{{detailedInfo.directions}}</span>
+             </p>
+      </div>
+
     </div>
-  </div>
-<br>
-<br>
-<br>
-  <footer class="modal-footer modal-footer-center">
-    <a ui-sref="contact" class="footer">Contact Us</a>
-    <a ui-sref="about" class="footer">About</a>
-    <a ui-sref="mission" class="footer">Our Mission</a>
-  </footer>
-<br>
+      <footer class="modal-footer modal-footer-center" id="style">
+        <a ui-sref="contact" class="footer">Contact Us</a>
+        <a ui-sref="about" class="footer">About</a>
+        <a ui-sref="mission" class="footer">Our Mission</a>
+      </footer>
 </section>
